# modules/chat-management/feature/get-chats/get-chats.route.ts
@@ -4,6 +4,6 @@ import { getChatsHandler } from "./get-chats.handler";
 
 const router = Router();
 
-router.get("/:roomId", getChatsHandler);
+router.get("/:roomId/chats", getChatsHandler);
 
 export default router;
